# GPU-train

./: .editorconfig  .gitignore  README.md  docker-compose.yml  makefile
Doc/: libtorch_memo.md  wsl_setup.md
Docker/c/: Dockerfile  README.md
Docker/c/doc/: libtorch_memo.md
Docker/c/src/: main.c  main.cu
Docker/c/src/deviceInfo/: README.md  main.cu
Docker/c/src/hello-sample/: main.cu
Docker/c/src/libtorch_example/: main.cpp
Docker/c/src/libtorch_example2/: main.cpp
Docker/c/src/libtorch_example3/: main.cpp
Docker/c/src/libtorch_example4/: main.cpp
Docker/c/src/pytorch-sample/: CMakeLists.txt  main.cpp
Docker/c/src/simpleDivergence/: main.cu
Docker/c/src/utils/: common.h
Docker/cpp/: Dockerfile
Docker/cpp/src/deviceInfo/: README.md  main.cu
Docker/cpp/src/hello-sample/: main.cu
Docker/cpp/src/libtorch_example2/: CMakeLists.txt
Docker/cpp/src/libtorch_example3/: main.cpp
Docker/cpp/src/simpleDivergence/: main.cu
Docker/cpp/src/utils/: common.h
Docker/hpc/: Dockerfile
Docker/hpc/projects/: makefile
Docker/hpc/projects/example1/: main.cu
Docker/hpc/projects/example10/: main.cu
Docker/hpc/projects/example11/: main.cu
Docker/hpc/projects/example12/: main.cu
Docker/hpc/projects/example13/: main.cu
Docker/hpc/projects/example14/: main.cu
Docker/hpc/projects/example15/: main.cu
Docker/hpc/projects/example16/: main.cu
Docker/hpc/projects/example17/: main.cu
Docker/hpc/projects/example18/: main.cu
Docker/hpc/projects/example19/: main.cu
Docker/hpc/projects/example2/: main.cu
Docker/hpc/projects/example20/: main.cu
Docker/hpc/projects/example21/: main.cu
Docker/hpc/projects/example22/: CMakeLists.txt
Docker/hpc/projects/example3/: main.cu
Docker/hpc/projects/example4/: main.cu
Docker/hpc/projects/example5/: main.cu
Docker/hpc/projects/example6/: main.cu
Docker/hpc/projects/example7/: main.cu
Docker/hpc/projects/example8/: main.cu
Docker/hpc/projects/example9/: main.cu
Docker/hpc/projects/utils/: common.h  constant_example_kernel.cuh  copy_kernel.cuh  rand_example_kernel.cuh  rand_generator_kernel.cuh  read_offset_kernel.cuh  shared_square_example_kernel.cuh  sync_example_kernel.cuh  zero_init_kernel.cuh
Docker/hpc/projects/warpshfl/: CMakeLists.txt
Docker/hpc/projects/warpshfl/include/: kernel.cuh
Docker/hpc/projects/warpshfl/src/: main.cu
Docker/hpc/templates/cuda_project/: CMakeLists.txt
Docker/python/: Dockerfile  README.md  requirements.in  requirements.txt
Docker/q/: dockerfile  import.pth  makefile  requirements.in  requirements.txt
Docker/q/src/: Example.qs
Docker/q/src/TestCode/: Program.qs  TestCode.csproj  __main__.py
Docker/q/src/libs/: Library.qs  libs.csproj  oracles.qs
Docker/q/src/sample1/: Program.qs
Docker/vulkan/: Dockerfile  dockerfile
Docker/vulkan/src/: makefile
Docker/vulkan/src/example1/: CMakeLists.txt
Docker/vulkan/src/vkinfo/: CMakeLists.txt
Docker/vulkan/src/vkinfo/src/: main.cpp
Docker/vulkan/template/project/: CMakeLists.txt
scripts/: wsl-install-docker-compose.sh  wsl-install-docker.sh  wsl-install-github-cli.sh  wsl-install-npm.sh  wsl-install-nvidia-container-toolkit.sh  wsl-install-podman.sh  wsl-install-py.sh  wsl-install-rust.sh
scripts/ubuntu-1804/: wsl-install-cuda10.1.sh  wsl-install-cuda11.0.sh
scripts/ubuntu-2004/: wsl-install-cuda11.0.sh  wsl-install-cuda12.0.sh  wsl-uninstall-cuda.sh
(+18 files in other folders)
